# sglawwatch-to-sqlite

./: .env  .env.example  .gitignore  README.md  llms.md  pyproject.toml
.github/workflows/: fetch.yml  new_release.yml  update-llms-doc.yml
sglawwatch_to_sqlite/: cli.py  db_manager.py  metadata_manager.py  project_metadata.json  storage.py  tools.py
sglawwatch_to_sqlite/resources/: headlines.py
tests/: conftest.py  test_db_manager.py  test_headlines.py  test_metadata_manager.py  test_sglawwatch_to_sqlite.py  test_storage.py  test_tools.py
